--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,54 @@
-version: '3.8'
-
 services:
   rabbitmq:
     image: rabbitmq:3-management
     ports:
-      - "5672:5672"        # RabbitMQ messaging port
-      - "15672:15672"      # Management UI
+      - "5672:5672"
+      - "15672:15672"
     hostname: rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
 
+  mongo:
+    image: mongo:6.0
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+  mongo-express:
+    image: mongo-express
+    ports:
+      - "8082:8081"
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongo
+      - ME_CONFIG_MONGODB_PORT=27017
+      - ME_CONFIG_BASICAUTH_USERNAME=admin
+      - ME_CONFIG_BASICAUTH_PASSWORD=admin
+    depends_on:
+      - mongo
+
   producer:
     build:
       context: ./producer
     ports:
-      - "8080:8080"        # Web UI
+      - "8080:8080"
     environment:
       - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_DATA_MONGODB_URI=mongodb://mongo:27017/messages
     depends_on:
       - rabbitmq
+      - mongo
 
   consumer:
     build:
       context: ./consumer
     environment:
       - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_DATA_MONGODB_URI=mongodb://mongo:27017/messages
     depends_on:
       - rabbitmq
+      - mongo
+
+volumes:
+  mongo-data:
