--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,11 +1,20 @@
-# Dockerfile
+# Dockerfile per Consumer con supporto shared lib
 FROM maven:3.8.7-eclipse-temurin-17 AS build
-WORKDIR /app
-COPY . .
+
+# Prima costruisci e installa il modulo shared
+WORKDIR /app/shared
+COPY shared/pom.xml ./
+COPY shared/src ./src
+RUN mvn clean install -DskipTests
+
+# Poi costruisci il consumer
+WORKDIR /app/consumer
+COPY consumer/pom.xml ./
+COPY consumer/src ./src
 RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app/consumer/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
