--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -28,8 +28,12 @@
     </scm>
     <properties>
         <java.version>17</java.version>
-    </properties>
-    <dependencies>
+    </properties>    <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>shared</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
