--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,21 @@ services:
     depends_on:
       - rabbitmq
       - mongo
+  
+  maildev:
+    image: maildev/maildev:2.2.1
+    hostname: maildev
+    environment:
+      - TZ=Europe/Rome
+      - MAILDEV_WEB_PORT=1080
+      - MAILDEV_SMTP_PORT=1025
+    ports:
+      - "8081:1080"
+      - "8025:1025"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
 
 volumes:
   mongo-data:
