sms implementation with new queue, new consumer and new form

--- a/consumer-email/Dockerfile
+++ b/consumer-email/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile per Consumer con supporto shared lib
+# Dockerfile per Consumer Email con supporto shared lib
 FROM maven:3.8.7-eclipse-temurin-17 AS build
 
 # Prima costruisci e installa il modulo shared
@@ -7,14 +7,14 @@ COPY shared/pom.xml ./
 COPY shared/src ./src
 RUN mvn clean install -DskipTests
 
-# Poi costruisci il consumer
-WORKDIR /app/consumer
-COPY consumer/pom.xml ./
-COPY consumer/src ./src
+# Poi costruisci il consumer-email
+WORKDIR /app/consumer-email
+COPY consumer-email/pom.xml ./
+COPY consumer-email/src ./src
 RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17
 WORKDIR /app
-COPY --from=build /app/consumer/target/*.jar app.jar
+COPY --from=build /app/consumer-email/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
